--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .page-container {
     width: 100%;
-    height: 100vh;
+    /*height: 100vh; uitgezet want flex-box groeide anders niet mee en niet alle titels zichtbaar*/
     color: white;
     background: rgb(44,47,57);
     /*Wil jij ook zo'n coole gradient maken? Deze is gemaakt via https://cssgradient.io/ - kind kan de was doen!*/
@@ -13,4 +13,6 @@
 
 .page-container img {
     width: 500px;
+    margin-bottom: 1rem;
+    padding: 1rem;
 }
