--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --color-secondary: #2C2F39;
   --color-tertiary: #50535C;
   --color-white: #FFFFFF;
+  --color-purple: #8085ED;
 }
 
 * {
@@ -58,5 +59,4 @@ p {
 
 a {
   text-decoration: none;
-  color: #fff;
 }
